objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <recordTypes>
        <fullName>Standard_Order</fullName>
        <active>true</active>
        <description>Used for standard sales orders</description>
        <label>Standard Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OrderAmountValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Amount__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Total amount should be positive</errorMessage>
    </validationRules>
</CustomObject>